Added first API interaction
The app now queries the server for login authentication, using OkHttp.
Added the ApiHandler class.
Added the OkHttp base files.
Modified the manifest to enable internet connectivity.
Minor refactoring for onClick methods.

--- a/app/src/main/res/layout/activity_registra.xml
+++ b/app/src/main/res/layout/activity_registra.xml
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:text="INVIA"
         android:id="@+id/bSubmit"
-        android:onClick="submitManager"
+        android:onClick="loginToJson"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"/>
