--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,6 +60,6 @@
         android:layout_below="@+id/editPassword_layout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:onClick="submitManager" />
+        android:onClick="loginToJson" />
 
 </RelativeLayout>
