--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,17 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/material_deep_teal_500</item>
+        <item name="android:textColorPrimary">@android:color/primary_text_light</item>
     </style>
 
-    <style name="Sonar" parent="AppTheme" >
-        <item name="colorPrimary">@color/material_deep_teal_500</item>
-        <item name="colorPrimaryDark">@color/material_deep_teal_500</item>
-    </style>
-
-    <style name="MyNavigationDrawerTheme" parent="MaterialNavigationDrawerTheme">
+    <style name="MyNavigationDrawerTheme" parent="MaterialNavigationDrawerTheme.Light">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/material_deep_teal_500</item>
     </style>
 </resources>
