--- a/app/src/main/res/layout/activity_registra.xml
+++ b/app/src/main/res/layout/activity_registra.xml
@@ -1,132 +1,198 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-
+    android:id="@+id/scrollView"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:layout_width="85dp"
-        android:layout_height="85dp"
-        android:id="@+id/imgLogo"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:src="@mipmap/ic_launcher" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true">
 
+        <ImageView
+            android:layout_width="85dp"
+            android:layout_height="85dp"
+            android:id="@+id/imgLogo"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:src="@mipmap/ic_launcher" />
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editName_layout"
-        android:layout_marginTop="100dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true">
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/editName"
-            android:hint="Nome"/>
-    </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editUsername_layout"
+            android:layout_marginTop="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/editUsername"
+                android:hint="Username"
+                android:inputType="text"
+                android:text="cavaliere" />
+        </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editSurname_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editName_layout"
-        android:layout_marginTop="5dp">
-        <EditText
-            android:id="@+id/editSurname"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="Cognome" />
-    </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editName_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/editUsername_layout"
+            android:layout_marginTop="5dp">
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/editName"
+                android:hint="Nome"
+                android:text="SilvioPier" />
+        </android.support.design.widget.TextInputLayout>
 
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editEmail_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/layout_spinner"
-        android:layout_marginTop="5dp">
-        <EditText
-            android:id="@+id/editEmail"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="E-Mail" />
-    </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editSurname_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/editName_layout"
+            android:layout_marginTop="5dp">
+            <EditText
+                android:id="@+id/editSurname"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Cognome"
+                android:text="ilBerlu" />
+        </android.support.design.widget.TextInputLayout>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="INVIA"
-        android:id="@+id/bSubmit"
-        android:onClick="loginToJson"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"/>
-
-
-    <LinearLayout
-        android:id="@+id/layout_spinner"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editSurname_layout"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editEmail_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/layout_spinner"
+            android:layout_marginTop="5dp">
+            <EditText
+                android:id="@+id/editEmail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="E-Mail"
+                android:inputType="text"
+                android:text="berlu@sconi.bellogu" />
+        </android.support.design.widget.TextInputLayout>
 
         <TextView
-            android:layout_width="71dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Data di Nascita"
             android:id="@+id/twData"
-            android:layout_alignParentBottom="true"
+            android:layout_below="@+id/editSurname_layout"
+            android:layout_centerHorizontal="true"
             android:layout_alignParentLeft="true"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="20dp"
             android:textSize="18dp"
             android:layout_gravity="center_vertical"
             android:textAlignment="center"
             android:layout_marginTop="2dp" />
 
-        <Spinner
+        <LinearLayout
+            android:id="@+id/layout_spinner"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:id="@+id/spinner_giorni"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_toLeftOf="@+id/spinner_mesi" />
-
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:id="@+id/spinner_mesi"
-            android:layout_marginTop="5dp"
-            android:layout_toLeftOf="@+id/spinner_anni" />
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:id="@+id/spinner_anni"
-            android:layout_below="@+id/editSurname_layout"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/twData"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="5dp" />
-    </LinearLayout>
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:textAlignment="gravity"
+            android:gravity="center">
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:id="@+id/spinner_giorni"
+                android:layout_marginTop="5dp" />
 
-</RelativeLayout>
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:id="@+id/spinner_mesi"
+                android:layout_marginTop="5dp" />
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:id="@+id/spinner_anni"
+                android:layout_marginTop="5dp" />
+        </LinearLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editPsw_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/editEmail_layout"
+            android:layout_marginTop="5dp">
+            <EditText
+                android:id="@+id/editPsw"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:text="bellogucci" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editConfPsw_layout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/editPsw_layout"
+            android:layout_marginTop="5dp">
+            <EditText
+                android:id="@+id/editConfPsw"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:hint="Conferma password"
+                android:inputType="textPassword"
+                android:text="bellogucci" />
+        </android.support.design.widget.TextInputLayout>
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="INVIA"
+            android:id="@+id/bSubmit"
+            android:onClick="loginToJson"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/editConfPsw_layout"/>
+
+    </RelativeLayout>
+
+</ScrollView>
