--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,11 +9,11 @@
         <item name="android:textColorPrimary">@android:color/primary_text_light</item>
     </style>
 
-    <style name="AppThemeSplash" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/material_deep_teal_500</item>
-        <item name="android:textColorPrimary">@android:color/primary_text_light</item>
+    <style name="AppThemeSplash" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+        <item name="android:background">#FF222222</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:fitsSystemWindows">true</item>
     </style>
 
     <style name="MyNavigationDrawerTheme" parent="MaterialNavigationDrawerTheme.Light">
@@ -21,7 +21,6 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/material_deep_teal_500</item>
     </style>
-
 
     <style name="FullscreenTheme" parent="AppTheme">
         <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
