--- a/app/src/main/res/layout/fragment_position.xml
+++ b/app/src/main/res/layout/fragment_position.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="it.cnvcrew.sonar.PositionActivity">
+    tools:context=".PositionFragment">
 
     <Button
         android:layout_width="wrap_content"
@@ -13,8 +13,7 @@
         android:id="@+id/btn_send_position"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
-        android:onClick="sendPosition" />
+        android:layout_marginTop="40dp" />
 
     <TextView
         android:layout_width="wrap_content"
