--- a/app/src/main/res/layout/activity_registra.xml
+++ b/app/src/main/res/layout/activity_registra.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    android:layout_width="match_parent"
+<ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/scrollView"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -12,25 +12,26 @@
         android:focusableInTouchMode="true">
 
         <ImageView
-            android:layout_width="85dp"
-            android:layout_height="85dp"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:id="@+id/imgLogo"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="120dp"
             android:src="@mipmap/ic_launcher" />
 
-        <android.support.design.widget.TextInputLayout
+        <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editUsername_layout"
-            android:layout_marginTop="100dp"
-            android:layout_alignParentTop="true"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/imgLogo"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_alignParentRight="true"
-            android:layout_alignParentLeft="true">
+            android:layout_alignParentLeft="true"
+            app:mtf_openKeyboardOnFocus="true">
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -38,9 +39,9 @@
                 android:hint="Username"
                 android:inputType="text"
                 android:text="cavaliere" />
-        </android.support.design.widget.TextInputLayout>
+        </com.github.florent37.materialtextfield.MaterialTextField>
 
-        <android.support.design.widget.TextInputLayout
+        <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editName_layout"
@@ -50,16 +51,16 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/editUsername_layout"
-            android:layout_marginTop="5dp">
+            app:mtf_openKeyboardOnFocus="true">
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/editName"
                 android:hint="Nome"
                 android:text="SilvioPier" />
-        </android.support.design.widget.TextInputLayout>
+        </com.github.florent37.materialtextfield.MaterialTextField>
 
-        <android.support.design.widget.TextInputLayout
+        <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editSurname_layout"
@@ -69,16 +70,16 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/editName_layout"
-            android:layout_marginTop="5dp">
+            app:mtf_openKeyboardOnFocus="true">
             <EditText
                 android:id="@+id/editSurname"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Cognome"
                 android:text="ilBerlu" />
-        </android.support.design.widget.TextInputLayout>
+        </com.github.florent37.materialtextfield.MaterialTextField>
 
-        <android.support.design.widget.TextInputLayout
+        <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editEmail_layout"
@@ -88,7 +89,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/layout_spinner"
-            android:layout_marginTop="5dp">
+            app:mtf_openKeyboardOnFocus="true">
             <EditText
                 android:id="@+id/editEmail"
                 android:layout_width="match_parent"
@@ -96,7 +97,7 @@
                 android:hint="E-Mail"
                 android:inputType="text"
                 android:text="berlu@sconi.bellogu" />
-        </android.support.design.widget.TextInputLayout>
+        </com.github.florent37.materialtextfield.MaterialTextField>
 
         <TextView
             android:layout_width="wrap_content"
@@ -111,7 +112,8 @@
             android:textSize="18dp"
             android:layout_gravity="center_vertical"
             android:textAlignment="center"
-            android:layout_marginTop="2dp" />
+            android:layout_marginTop="10dp"
+            android:textColor="#FFFFFFFF"/>
 
         <LinearLayout
             android:id="@+id/layout_spinner"
@@ -129,21 +131,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:id="@+id/spinner_giorni"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"
+                android:textColor="#FFFFFFFF" />
 
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:id="@+id/spinner_mesi"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"
+                android:textColor="#FFFFFFFF" />
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:id="@+id/spinner_anni"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"
+                android:textColor="#FFFFFFFF" />
         </LinearLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editPsw_layout"
@@ -153,7 +158,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/editEmail_layout"
-            android:layout_marginTop="5dp">
+            app:mtf_openKeyboardOnFocus="true">
             <EditText
                 android:id="@+id/editPsw"
                 android:layout_width="match_parent"
@@ -161,9 +166,9 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:text="bellogucci" />
-        </android.support.design.widget.TextInputLayout>
+        </com.github.florent37.materialtextfield.MaterialTextField>
 
-        <android.support.design.widget.TextInputLayout
+        <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editConfPsw_layout"
@@ -173,7 +178,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/editPsw_layout"
-            android:layout_marginTop="5dp">
+            app:mtf_openKeyboardOnFocus="true">
             <EditText
                 android:id="@+id/editConfPsw"
                 android:layout_width="match_parent"
@@ -181,7 +186,7 @@
                 android:hint="Conferma password"
                 android:inputType="textPassword"
                 android:text="bellogucci" />
-        </android.support.design.widget.TextInputLayout>
+        </com.github.florent37.materialtextfield.MaterialTextField>
 
 
         <Button
@@ -191,7 +196,8 @@
             android:id="@+id/bSubmit"
             android:onClick="loginToJson"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/editConfPsw_layout"/>
+            android:layout_below="@+id/editConfPsw_layout"
+            android:layout_marginTop="10dp"/>
 
     </RelativeLayout>
 
