--- a/app/src/main/res/layout/activity_create_new_event.xml
+++ b/app/src/main/res/layout/activity_create_new_event.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:text="INVIA"
         android:id="@+id/bSubmit"
-        android:layout_below="@+id/editPassword_layout"
+        android:layout_below="@+id/edit_password_login_layout"
         android:layout_centerHorizontal="true"
         android:onClick="loginToJson" />
 
