--- a/app/src/main/res/layout/activity_create_new_event.xml
+++ b/app/src/main/res/layout/activity_create_new_event.xml
@@ -10,7 +10,7 @@
     <android.support.design.widget.TextInputLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editName_layout"
+        android:id="@+id/et_name_register_layout"
         android:layout_marginTop="20dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -21,7 +21,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/editName"
+            android:id="@+id/et_name_register"
             android:hint="Titolo"
             android:textSize="27dp"/>
     </android.support.design.widget.TextInputLayout>
@@ -35,7 +35,7 @@
         android:layout_marginRight="20dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/editName_layout">
+        android:layout_below="@+id/et_name_register_layout">
         <EditText
             android:id="@+id/editDescription"
             android:layout_width="match_parent"
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="INVIA"
-        android:id="@+id/bSubmit"
+        android:id="@+id/btn_register"
         android:layout_below="@+id/edit_password_login_layout"
         android:layout_centerHorizontal="true"
         android:onClick="loginToJson" />
