--- a/app/src/main/res/layout/activity_registra.xml
+++ b/app/src/main/res/layout/activity_registra.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- TODO uniformare nome variabili su modello tipoview_nomeview_register -->
-
 <ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,7 +15,7 @@
         <ImageView
             android:layout_width="110dp"
             android:layout_height="110dp"
-            android:id="@+id/imgLogo"
+            android:id="@+id/iv_logo_register"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="120dp"
@@ -26,9 +24,9 @@
         <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/edit_username_register_layout"
+            android:id="@+id/et_username_register_layout"
             android:layout_marginTop="20dp"
-            android:layout_below="@id/imgLogo"
+            android:layout_below="@id/iv_logo_register"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
@@ -38,7 +36,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/edit_username_register"
+                android:id="@+id/et_username_register"
                 android:hint="Username"
                 android:inputType="text"
                 android:text="cavaliere" />
@@ -47,18 +45,18 @@
         <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editName_layout"
+            android:id="@+id/et_name_register_layout"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/edit_username_register_layout"
+            android:layout_below="@+id/et_username_register_layout"
             app:mtf_openKeyboardOnFocus="true">
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/editName"
+                android:id="@+id/et_name_register"
                 android:hint="Nome"
                 android:text="SilvioPier" />
         </com.github.florent37.materialtextfield.MaterialTextField>
@@ -66,16 +64,16 @@
         <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editSurname_layout"
+            android:id="@+id/et_surname_register_layout"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/editName_layout"
+            android:layout_below="@+id/et_name_register_layout"
             app:mtf_openKeyboardOnFocus="true">
             <EditText
-                android:id="@+id/editSurname"
+                android:id="@+id/et_surname_register"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Cognome"
@@ -85,7 +83,7 @@
         <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editEmail_layout"
+            android:id="@+id/et_email_register_layout"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
@@ -106,8 +104,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Data di Nascita"
-            android:id="@+id/twData"
-            android:layout_below="@+id/editSurname_layout"
+            android:id="@+id/tv_dob_register"
+            android:layout_below="@+id/et_surname_register_layout"
             android:layout_centerHorizontal="true"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="24dp"
@@ -115,7 +113,7 @@
             android:textSize="18dp"
             android:layout_gravity="center_vertical"
             android:textAlignment="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:textColor="#FFFFFFFF"/>
 
         <LinearLayout
@@ -123,7 +121,7 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/twData"
+            android:layout_below="@+id/tv_dob_register"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="20dp"
@@ -133,20 +131,20 @@
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:id="@+id/spinner_giorni"
+                android:id="@+id/sp_days_register"
                 android:layout_marginTop="5dp"
                 android:textColor="#FFFFFFFF" />
 
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:id="@+id/spinner_mesi"
+                android:id="@+id/sp_months_register"
                 android:layout_marginTop="5dp"
                 android:textColor="#FFFFFFFF" />
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
-                android:id="@+id/spinner_anni"
+                android:id="@+id/sp_years_register"
                 android:layout_marginTop="5dp"
                 android:textColor="#FFFFFFFF" />
         </LinearLayout>
@@ -154,16 +152,16 @@
         <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/edit_password_register_layout"
+            android:id="@+id/et_password_register_layout"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/editEmail_layout"
+            android:layout_below="@+id/et_email_register_layout"
             app:mtf_openKeyboardOnFocus="true">
             <EditText
-                android:id="@+id/edit_password_register"
+                android:id="@+id/et_password_register"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Password"
@@ -174,16 +172,16 @@
         <com.github.florent37.materialtextfield.MaterialTextField
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editConfPsw_layout"
+            android:id="@+id/et_repeatpassword_register_layout"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentLeft="true"
-            android:layout_below="@+id/edit_password_register_layout"
+            android:layout_below="@+id/et_password_register_layout"
             app:mtf_openKeyboardOnFocus="true">
             <EditText
-                android:id="@+id/editConfPsw"
+                android:id="@+id/et_repeatpassword_register"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="Conferma password"
@@ -196,11 +194,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="INVIA"
-            android:id="@+id/bSubmit"
+            android:id="@+id/btn_register"
             android:onClick="loginToJson"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/editConfPsw_layout"
-            android:layout_marginTop="10dp"/>
+            android:layout_below="@+id/et_repeatpassword_register_layout"
+            android:layout_marginTop="40dp"/>
 
     </RelativeLayout>
 
