--- a/app/src/main/res/menu/menu_fragment_profilo.xml
+++ b/app/src/main/res/menu/menu_fragment_profilo.xml
@@ -5,6 +5,6 @@
     <item android:id="@+id/btn_interests_menu"
         android:title="Interessi"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_new"
+        android:icon="@drawable/ic_extension_white_48dp"
         android:onClick="openInterests"/>
 </menu>
